--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <table border="1">
     <thead>
       <tr>
+        <th>ID</th>
+        <th>Timestamp</th>
         <th>Title</th>
         <th>Author</th>
         <th>ISBN</th>
@@ -31,7 +33,7 @@
 
     async function loadBooks() {
       const { data, error } = await supabase
-        .from('books')
+        .from('books info')
         .select('*');
 
       if (error) {
@@ -45,6 +47,8 @@
         const row = document.createElement('tr');
 
         row.innerHTML = `
+          <td>${book.id}</td>
+          <td>${book.created_at}</td>  
           <td>${book.title}</td>
           <td>${book.author}</td>
           <td>${book.isbn}</td>
